--- a/template/master.twig
+++ b/template/master.twig
@@ -21,8 +21,32 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
+    <link rel="stylesheet" href="{{system_base}}/css/main.css">
+
     <script src="{{system_base}}/plugins/vue/vue.js"></script>
+    <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
+
+    <link rel="stylesheet" href="{{system_base}}/adminlte/dist/css/alt-component.css">
     <script src="{{system_base}}/alt-component/dist/alt-component.umd.min.js"></script>
+
+    <!-- REQUIRED SCRIPTS -->
+
+    <!-- jQuery -->
+    <script src="{{system_base}}/plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap 4 -->
+    <script src="{{system_base}}/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="{{system_base}}/adminlte/dist/js/adminlte.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
+
+    <script src="{{system_base}}/plugins/moment/moment-with-locales.min.js"></script>
+
+    <script src="{{system_base}}/js/default.js"></script>
+    <script src="{{system_base}}/js/tab-ajax.js"></script>
+
+
 </head>
 
 <body class="hold-transition sidebar-mini text-sm">
@@ -346,14 +370,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </div>
     <!-- ./wrapper -->
 
-    <!-- REQUIRED SCRIPTS -->
-
-    <!-- jQuery -->
-    <script src="{{system_base}}/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="{{system_base}}/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="{{system_base}}/adminlte/dist/js/adminlte.min.js"></script>
 </body>
 
 </html>
