--- a/pages/Dashboard/test.twig
+++ b/pages/Dashboard/test.twig
@@ -1,5 +1,80 @@
-<card>
-    <card-header>Card header</card-header>
-    <card-body>body</card-body>
-    <card-footer>footer</card-footer>
-</card>
+<form class="form-horizontal" novalidate>
+    <div class="card card-info">
+        <div class="card-header">
+            <h3 class="card-title">Horizontal Form</h3>
+        </div>
+        <!-- /.card-header -->
+        <!-- form start -->
+
+        <div class="card-body">
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required name="email">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputPassword3" placeholder="Password" required name="password">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="offset-sm-2 col-sm-10">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                        <label class="form-check-label" for="exampleCheck2">Remember me</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.card-body -->
+        <div class="card-footer">
+            <button type="submit" class="btn btn-info">Sign in</button>
+            <button type="button" class="btn btn-default">Cancel</button>
+        </div>
+        <!-- /.card-footer -->
+
+    </div>
+</form>
+
+<script>
+
+    //-- form validation --
+    $.validator.setDefaults({
+        ignore: [],
+        highlight: function (element) {
+            //element.classList.add("is-invalid");
+        },
+        unhighlight: function (element) {
+        //    element.classList.remove("is-invalid");
+        },
+        errorElement: 'div',
+        errorClass: 'invalid-feedback',
+        errorPlacement: function (error, element) {
+            error.insertAfter(element);
+        }
+    });
+
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll("form");
+
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                $(form).validate();
+
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+</script>
