--- a/template/master.twig
+++ b/template/master.twig
@@ -23,6 +23,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <link rel="stylesheet" href="{{system_base}}/css/main.css">
 
+
+    <!-- fullCalendar -->
+    <link rel="stylesheet" href="{{system_base}}/plugins/fullcalendar/main.min.css">
+    <link rel="stylesheet" href="{{system_base}}/plugins/fullcalendar-interaction/main.min.css">
+    <link rel="stylesheet" href="{{system_base}}/plugins/fullcalendar-daygrid/main.min.css">
+    <link rel="stylesheet" href="{{system_base}}/plugins/fullcalendar-timegrid/main.min.css">
+    <link rel="stylesheet" href="{{system_base}}/plugins/fullcalendar-bootstrap/main.min.css">
+
     <script src="{{system_base}}/plugins/vue/vue.js"></script>
     <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
 
@@ -42,6 +50,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
 
     <script src="{{system_base}}/plugins/moment/moment-with-locales.min.js"></script>
+
+    <script src="{{system_base}}/plugins/fullcalendar/main.min.js"></script>
+    <script src="{{system_base}}/plugins/fullcalendar-daygrid/main.min.js"></script>
+    <script src="{{system_base}}/plugins/fullcalendar-timegrid/main.min.js"></script>
+    <script src="{{system_base}}/plugins/fullcalendar-interaction/main.min.js"></script>
+    <script src="{{system_base}}/plugins/fullcalendar-bootstrap/main.min.js"></script>
 
     <script src="{{system_base}}/js/default.js"></script>
     <script src="{{system_base}}/js/tab-ajax.js"></script>
