--- a/pages/index.twig
+++ b/pages/index.twig
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{{system_base}}/adminlte/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
 </head>
 
 <body class="hold-transition login-page">
@@ -27,13 +28,13 @@
             {{app.config.user.company}}
         </div>
         <!-- /.login-logo -->
-        <div class="card">
+        <div class="card" id="app">
             <div class="card-body login-card-body">
-                <p class="login-box-msg">Sign in to start your session</p>
+                <p class="login-box-msg" v-text="message" :class="{'text-red':error}"></p>
 
-                <form action="">
+                <form>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Username">
+                        <input type="text" class="form-control" placeholder="Username" autocomplete="username" v-model="username">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-user"></span>
@@ -41,7 +42,7 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" v-model="password">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -51,7 +52,7 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="icheck-primary">
-                                <input type="checkbox" id="remember">
+                                <input type="checkbox" id="remember" ref="remember">
                                 <label for="remember">
                                     Remember Me
                                 </label>
@@ -59,14 +60,14 @@
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" class="btn btn-primary btn-block" @click.prevent="signIn">Sign In</button>
                         </div>
                         <!-- /.col -->
                     </div>
                 </form>
 
                 <p class="mb-1">
-                    <a href="forgot-password.html">I forgot my password</a>
+                    <a href="#" @click.prevent="forgetPassword">I forgot my password</a>
                 </p>
 
             </div>
@@ -75,13 +76,35 @@
     </div>
     <!-- /.login-box -->
 
+    <template id="forget-dialog">
+        <form>
+            <div class="form-group">
+                <label>Username</label>
+                <input class="form-control" type="text" name="username" required autocomplete="username" />
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input class="form-control" type="email" name="email" required autocomplete="email" />
+            </div>
+        </form>
+    </template>
+
     <!-- jQuery -->
     <script src="{{system_base}}/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="{{system_base}}/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="{{system_base}}/adminlte/dist/js/adminlte.min.js"></script>
+    <!-- Bootbox -->
+    <script src="{{system_base}}/plugins/bootbox/bootbox.all.min.js"></script>
 
+    <!-- Vue -->
+    <script src="{{system_base}}/plugins/vue/vue.js"></script>
+    <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
+    <script src="{{system_base}}/js/vue-gql.js"></script>
+
+
+    <script src="{{system_base}}/src/index.js"></script>
 </body>
 
 </html>
