--- a/pages/Translate/all.twig
+++ b/pages/Translate/all.twig
@@ -1,17 +1,15 @@
 <div id="div1">
-    <alt-box>
-        <alt-box-body>
+    <card>
+        <card-body>
             <div class="form-group">
                 <label>Module</label>
                 <select class="form-control" v-model="module" @change="changeModule">
                     <option></option>
-                    <option v-for="m in modules" v-text="m.class"></option>
+                    <option v-for="m in modules" v-text="m.name"></option>
                 </select>
             </div>
 
-            <hr/>
-
-            <table class="table table-hover table-condensed">
+            <table class="table table-hover table-sm">
                 <thead>
                     <tr>
                         <th></th>
@@ -28,13 +26,13 @@
                             </button>
                         </td>
                         <td>
-                            <input type="text" class="form-control input-sm" v-model="newRecord.action" />
+                            <input type="text" class="form-control form-control-sm" v-model="newRecord.action" />
                         </td>
                         <td>
-                            <input type="text" class="form-control input-sm" v-model="newRecord.name" />
+                            <input type="text" class="form-control form-control-sm" v-model="newRecord.name" />
                         </td>
                         <td v-for="(language,l) in languages">
-                            <input type="text" class="form-control input-sm" v-model="newRecord.value[l]" />
+                            <input type="text" class="form-control form-control-sm" v-model="newRecord.value[l]" />
                         </td>
                     </tr>
 
@@ -59,7 +57,7 @@
                         </td>
                         <td>
                             <div v-if="editRecord==d">
-                                <input type="text" class="form-control input-sm" v-model="editRecord.action" />
+                                <input type="text" class="form-control form-control-sm" v-model="editRecord.action" />
                             </div>
                             <div v-else v-text="d.action">
 
@@ -67,7 +65,7 @@
                         </td>
                         <td>
                             <div v-if="editRecord==d">
-                                <input type="text" class="form-control input-sm" v-model="editRecord.name" />
+                                <input type="text" class="form-control form-control-sm" v-model="editRecord.name" />
                             </div>
                             <div v-else v-text="d.name">
 
@@ -75,7 +73,7 @@
                         </td>
                         <td v-for="(language,l) in languages">
                             <div v-if="editRecord==d">
-                                <input type="text" class="form-control input-sm" v-model="editRecord.value[l]" />
+                                <input type="text" class="form-control form-control-sm" v-model="editRecord.value[l]" />
                             </div>
                             <div v-else v-text="d.value[l]">
 
@@ -86,8 +84,8 @@
                 </tbody>
 
             </table>
-        </alt-box-body>
-    </alt-box>
+        </card-body>
+    </card>
 
 
 </div>
@@ -104,7 +102,7 @@
             },
             data: [],
             editRecord: null
-        }, mounted() {
+        }, async mounted() {
             this.$http.get("Translate/all/modules").then(resp => {
                 this.modules = resp.body.modules;
                 this.languages = resp.body.languages;
