--- a/pages/System/composer.twig
+++ b/pages/System/composer.twig
@@ -1,30 +1,35 @@
 {% verbatim %}
 <div id="_div1">
 
-	<alt-box class="box-primary">
-		<alt-box-header>
-			Composer
-			<button class="btn btn-xs btn-primary" @click="run('update mathsgod/alt')">update mathsgod/alt</button>
-			<button class="btn btn-xs btn-primary" @click="changeOwner">Change owner</button>
-			<button class="btn btn-xs btn-primary" @click="addRaymondRepo">Add Raymond repo</button>
-			<button class="btn btn-xs btn-primary" @click="updateComposer">Update composer</button>
-		</alt-box-header>
-		<alt-box-body>
-			<input type="text" v-model="cmd" placeholder="update mathsgod/alt" @keyup.enter="runComposer" class="form-control">
+	<card primary outline>
+		<card-header>
+			<div slot="title">
+				Composer
+				<button class="btn btn-xs btn-primary" @click="run('update mathsgod/alt3')">update mathsgod/alt3</button>
+				<button class="btn btn-xs btn-primary" @click="changeOwner">Change owner</button>
+				<button class="btn btn-xs btn-primary" @click="addRaymondRepo">Add Raymond repo</button>
+				<button class="btn btn-xs btn-primary" @click="updateComposer">Update composer</button>
+
+			</div>
+		</card-header>
+		<card-body>
+			<input type="text" v-model="cmd" placeholder="update mathsgod/alt3" @keyup.enter="runComposer" class="form-control">
 			<div v-html="composer_output" style="white-space:pre;overflow:auto">
 
 			</div>
-		</alt-box-body>
-	</alt-box>
+		</card-body>
+	</card>
 
 	<div class="row">
-		<div class="col-md-9">
-			<alt-box class="box-primary" ref="packageBox1">
-				<alt-box-header>
-					Installed packages
-				</alt-box-header>
-				<alt-box-body class="table-responsive">
-					<table class="table table-condensed table-hover" data-searching="true">
+		<div class="col-9">
+			<card primary outline ref="packageBox1">
+				<card-header>
+					<div slot="title">
+						Installed packages
+					</div>
+				</card-header>
+				<card-body class="table-responsive p-1">
+					<table class="table table-sm table-hover" data-searching="true">
 						<thead>
 							<tr>
 								<th>Name</th>
@@ -35,13 +40,13 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr v-for="p in installedPackages" v-if="p.version">
+							<tr v-for="p in installed" v-if="p.version">
 								<td v-text="p.name"></td>
 								<td v-text="p.description"></td>
 								<td v-text="p.version"></td>
 								<td>
 									<button @click="updatePackage(p.name)" class="btn btn-xs btn-primary">
-										<i class="fa fa-fw fa-cloud-download-alt"></i>
+										<i class="fa fa-fw fa-download"></i>
 									</button>
 								</td>
 								<td>
@@ -52,32 +57,34 @@
 							</tr>
 						</tbody>
 					</table>
-				</alt-box-body>
-			</alt-box>
+				</card-body>
+			</card>
 		</div>
 
-		<div class="col-md-3">
-			<alt-box class="box-primary" ref="packageBox2">
-				<alt-box-header>
-					New packages
-				</alt-box-header>
-				<alt-box-body class="table-responsive">
-					<table class="table table-condensed table-hover">
+		<div class="col">
+			<card primary outline ref="packageBox2">
+				<card-header>
+					<div slot="title">
+						New packages
+					</div>
+				</card-header>
+				<card-body class="table-responsive">
+					<table class="table table-sm table-hover">
 						<tr>
 							<th>Name</th>
 							<th></th>
 						</tr>
-						<tr v-for="p in installedPackages" v-if="!p.version">
-							<td v-text="p.name"></td>
+						<tr v-for="p in suggests">
+							<td v-text="p"></td>
 							<td>
-								<button v-if="!p.version" class="btn btn-xs btn-success" @click="requirePackage(p.name)">
+								<button class="btn btn-xs btn-success" @click="requirePackage(p)">
 									<i class="fa fa-fw fa-download"></i>
 								</button>
 							</td>
 						</tr>
 					</table>
-				</alt-box-body>
-			</alt-box>
+				</card-body>
+			</card>
 
 		</div>
 	</div>
@@ -91,7 +98,8 @@
 		data: {
 			cmd: "",
 			composer_output: "",
-			installedPackages: []
+			installed: [],
+			suggests: []
 		},
 		mounted() {
 			this.reloadPackages();
@@ -117,8 +125,9 @@
 			reloadPackages() {
 				this.$refs.packageBox1.showLoading();
 				this.$refs.packageBox2.showLoading();
-				this.$http.get("System/composer/installedPackages").then(resp => {
-					this.installedPackages = resp.body;
+				this.$http.get("System/composer/info").then(resp => {
+					this.installed = resp.data.installed;
+					this.suggests = resp.data.suggests;
 					this.$refs.packageBox1.hideLoading();
 					this.$refs.packageBox2.hideLoading();
 				});
@@ -172,4 +181,5 @@
 			}
 		}
 	});
-</script> {% endverbatim %}
+</script>
+{% endverbatim %}
