--- a/pages/System/composer.twig
+++ b/pages/System/composer.twig
@@ -21,14 +21,14 @@
 	</card>
 
 	<div class="row">
-		<div class="col-9">
+		<div class="col-md-9">
 			<card primary outline ref="packageBox1">
 				<card-header>
 					<div slot="title">
 						Installed packages
 					</div>
 				</card-header>
-				<card-body class="table-responsive p-1">
+				<card-body class="table-responsive p-0">
 					<table class="table table-sm table-hover" data-searching="true">
 						<thead>
 							<tr>
@@ -36,7 +36,7 @@
 								<th>Description</th>
 								<th>Version</th>
 								<th>Update</th>
-								<th></th>
+								<th>Remove</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -68,7 +68,7 @@
 						New packages
 					</div>
 				</card-header>
-				<card-body class="table-responsive">
+				<card-body class="table-responsive p-0">
 					<table class="table table-sm table-hover">
 						<tr>
 							<th>Name</th>
