--- a/pages/System/front_translate_twig.twig
+++ b/pages/System/front_translate_twig.twig
@@ -87,13 +87,13 @@
                         </div>
 
 
-                        <div class="card card-primary" v-if="unuse">
+                        <div class="card card-primary card-outline" v-if="unuse">
                             <div class="card-header">
-                                <div class="card-title">
+                                <h5 class="card-title">
                                     Unuse
-                                </div>
+                                </h5>
                             </div>
-                            <div class="card-body">
+                            <div class="card-body p-1">
                                 <table class="table table-sm table-hover" v-for="lang in langs">
                                     <thead>
                                         <tr>
