--- a/pages/System/shell.twig
+++ b/pages/System/shell.twig
@@ -1,31 +1,32 @@
-<div>
-	<p>
-		example:<br/>
-		尋找text: grep text * -r
-	</p>
-
-</div>
+<blockquote>
+	<p>Example</p>
+	<small>尋找text: grep text * -r</small>
+</blockquote>
 
 <div>
-	<input class='form-control' type='text' id='command' size='60' placeholder='輸入command,然後按enter'/>
+	<input class='form-control' type='text' id='command' size='60' placeholder='輸入command,然後按enter' />
 </div>
 
-<textarea class='form-control' id='result' style='width:100%' rows='40'></textarea>
+<div class="card">
+	<div class="card-body p-0">
+		<pre id='result'></pre>
+	</div>
+</div>
 
 {% verbatim %}
-   
+
 <script>
-$('#command').bind('keypress',function(e){
-	var code = e.keyCode || e.which;
-	if(code == 13) {
-		$("#result").html("loading...");
-		$.ajax({
-			url:"System/shell/run",
-			data:{cmd:$("#command").val()}
-		}).done(function(result){
-			$("#result").text(result);
-		});
-	}
-});
+	$('#command').bind('keypress', function (e) {
+		var code = e.keyCode || e.which;
+		if (code == 13) {
+			$("#result").html("loading...");
+			$.ajax({
+				url: "System/shell/run",
+				data: { cmd: $("#command").val() }
+			}).done(function (result) {
+				$("#result").text(result);
+			});
+		}
+	});
 </script>
 {% endverbatim %}
