--- a/template/master.twig
+++ b/template/master.twig
@@ -150,11 +150,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
             #}
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="logout" class="nav-link">
-                        <i class="fa fa-fw fa-sign-out-alt"></i>
-                    </a>
-                </li>
 
                 <!-- Messages Dropdown Menu -->
                 <li class="nav-item dropdown">
@@ -239,6 +234,23 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         </a>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user"></i>
+                        {{app.user.username}}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a href="User/profile" class="dropdown-item">
+                            <i class="fa fa-fw fa-id-badge mr-2"></i> Profile
+                        </a>
+                        <a href="System/view_as" class="dropdown-item">
+                            <i class="fa fa-fw fa-eye mr-2"></i> View as
+                        </a>
+                        <a href="System/logout" class="dropdown-item">
+                            <i class="fas fa-fw fa-sign-out-alt mr-2"></i> Logout
+                        </a>
                     </div>
                 </li>
                 <li class="nav-item">
