--- a/pages/index.twig
+++ b/pages/index.twig
@@ -103,7 +103,11 @@
     <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
     <script src="{{system_base}}/js/vue-gql.js"></script>
 
+    <!-- r-webauthn -->
+    <script src="{{composer_base}}/vendor/mathsgod/r-webauthn/dist/main.js"></script>
+
     <script src="{{system_base}}/src/index.js"></script>
+
 </body>
 
 </html>
