--- a/pages/ACL/edit.twig
+++ b/pages/ACL/edit.twig
@@ -5,7 +5,7 @@
 
                 <div class="form-group">
                     <label>Module</label>
-                    <select class="form-control" v-model="module">
+                    <select class="form-control form-control-sm" v-model="module">
                         <option></option>
                         <option v-for="m in modules" :value="m" v-text="m.name"></option>
                     </select>
@@ -13,14 +13,14 @@
 
                 <div class="form-group">
                     <label>User group</label>
-                    <select class="form-control" v-model="usergroup" @change="changeUserGroup">
+                    <select class="form-control form-control-sm" v-model="usergroup" @change="changeUserGroup">
                         <option v-for="ug in usergroups" :value="ug" v-text="ug.name"></option>
                     </select>
                 </div>
 
                 <div class="form-group">
                     <label>User</label>
-                    <select class="form-control" v-model="user" @change="changeUser">
+                    <select class="form-control form-control-sm" v-model="user" @change="changeUser">
                         <option v-for="u in users" :value="u" v-text="u.first_name + ' ' + u.last_name + ' (' + u.username + ')'"></option>
                     </select>
                 </div>
@@ -37,13 +37,19 @@
                 </thead>
 
                 <tbody>
-                    <tr v-for="a in data1.action">
+                    <tr v-for="(a,index) in data1.action">
                         <td v-text="a.action"></td>
                         <td>
-                            <icheck v-model="a.allow" @input="actionChecked(a)"></icheck>
+                            <div class="icheck-primary d-inline ml-2">
+                                <input type="checkbox" :id="'action-allow-'+index" v-model="a.allow" @change="actionChecked(a)">
+                                <label :for="'action-allow-'+index"></label>
+                            </div>
                         </td>
                         <td>
-                            <icheck v-model="a.deny" @input="actionChecked(a)"></icheck>
+                            <div class="icheck-primary d-inline ml-2">
+                                <input type="checkbox" :id="'action-deny-'+index" v-model="a.deny" @change="actionChecked(a)">
+                                <label :for="'action-deny-'+index"></label>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
@@ -60,13 +66,19 @@
                 </thead>
 
                 <tbody>
-                    <tr v-for="a in data1.path">
+                    <tr v-for="(a,index) in data1.path">
                         <td v-text="a.path"></td>
                         <td>
-                            <icheck v-model="a.allow" @input="actionChecked(a)"></icheck>
+                            <div class="icheck-primary d-inline ml-2">
+                                <input type="checkbox" :id="'path-allow-'+index" v-model="a.allow" @change="actionChecked(a)">
+                                <label :for="'path-allow-'+index"></label>
+                            </div>
                         </td>
                         <td>
-                            <icheck v-model="a.deny" @input="actionChecked(a)"></icheck>
+                            <div class="icheck-primary d-inline ml-2">
+                                <input type="checkbox" :id="'path-deny-'+index" v-model="a.deny" @change="actionChecked(a)">
+                                <label :for="'path-deny-'+index"></label>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
