--- a/template/master.twig
+++ b/template/master.twig
@@ -116,11 +116,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 </head>
 
-<body class="hold-transition sidebar-mini  text-sm layout-fixed layout-footer-fixed">
+<body class="hold-transition sidebar-mini  sidebar-open  text-sm layout-fixed layout-footer-fixed">
     <div class="wrapper">
 
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light ">
+        {% set header = app.user.style.header %}
+        {% if not header %}
+        {% set header = 'navbar-dark navbar-info' %}
+        {% endif %}
+        <nav class="main-header navbar navbar-expand {{header}}">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -245,9 +249,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <a href="User/profile" class="dropdown-item">
                             <i class="fa fa-fw fa-id-badge mr-2"></i> Profile
                         </a>
-                        <a href="System/view_as" class="dropdown-item">
+                        {% if app.user.isAdmin %}
+                        <a href="System/viewas" class="dropdown-item">
                             <i class="fa fa-fw fa-eye mr-2"></i> View as
                         </a>
+                        {% endif %}
                         <a href="System/logout" class="dropdown-item">
                             <i class="fas fa-fw fa-sign-out-alt mr-2"></i> Logout
                         </a>
@@ -261,7 +267,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- /.navbar -->
 
         <!-- Main Sidebar Container -->
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+
+        {% set sidebar = 'sidebar-dark-primary' %}
+        {% if app.user.style.sidebar %}
+        {% set sidebar = app.user.style.sidebar %}
+        {% endif %}
+        <aside class="main-sidebar {{sidebar}} elevation-4 ">
             <!-- Brand Logo -->
             {% if app.config.user.logo %}
             <a href="#" class="brand-link">
@@ -332,7 +343,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
                         <li class="nav-header">Main navigation</li>
                         {% for menu in sidebar_menu %}
-                        <li class="nav-item" is="nav-item" :menu="{{menu|json_encode}}"></li>
+                        <li class="nav-item" is="nav-item" :is-root="true" :menu="{{menu|json_encode}}"></li>
                         {% endfor %}
 
                         {#
@@ -496,7 +507,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 
     <!-- AdminLTE App -->
-    <script src="{{system_base}}/adminlte/dist/js/adminlte.min.js"></script>
+    <script src="{{system_base}}/adminlte/dist/js/adminlte.js"></script>
 
     <!-- Bootbox -->
     <script src="{{system_base}}/plugins/bootbox/bootbox.all.min.js"></script>
